--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <a href="Task8.2/index2.html">task8.2</a>
         <a href="Task8.2/about.html">task8.2</a>
         <a href="Task8.3/htmlforms.html">task8.3</a>
-        <a href="Task8.3/htmlforms1.html">task8.3</a>
-        <a href="Task8.4/htmlform1.html">task8.4</a>
+        <a href="Task8.3/task_8.html">task8.3</a>
+        <a href="Task8.4/task8_4.html">task8.4</a>
         <a href="Task8.5/htmlcssform3.html">task8.5</a>
     </body>
 </html>
