--- a/Task8.2/index2.html
+++ b/Task8.2/index2.html
@@ -4,7 +4,7 @@
     <title>Learning HTML</title>
 </head>
 <body>
-    <div>
+  /  <div>
     <p>hello, <strong> WORLD</strong></p>
     <P>MY <small> FIRST</small>web <em>page !</em></P>
   </div>
@@ -16,13 +16,7 @@
    <h4>heading 4</h4>
    <h5>heading 5</h5>
    <h6>heading 7</h6>
-   <ul>
-     <li>apple</li>
-     <img src="img/apple.jpg" alt="apple">
-     <li>orange</li>
-     <img src="img/orange.jpeg" alt="orange">
-     <li>mango</li>
-    </ul>
+   
    <ol>
     <li>sunday</li>
     <li>monday</li>
@@ -34,6 +28,14 @@
    <blockquote cite="https://www.oscarwildsite.com">
     we are in the gutter, but some looking at the stars
     </blockquote>
-   <p style="color:olive">style me :)</p>
+   <p style="color:olive">style me :)</p><ul>
+    <li>apple</li>
+    <img src="/HTML_AND_CSS/assets/apple.jpg" alt="Apple">
+    <li>orange</li>
+    <img src="/HTML_AND_CSS/assets/orange.jpeg" alt="Orange">
+    <li>mango</li>
+    <img src="/HTML_AND_CSS/assets/mango.jpg" alt="Mango">
+   </ul>
+
 </body>
 </html>
